--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,8 @@
 {
     "name": "ui",
     "version": "0.1.0",
-    "private": true,
-    "homepage": "https://vicnaum.github.io/proof-of-membership/index.html",
+    "private": false,
+    "homepage": "https://vicnaum.github.io/proof-of-membership",
     "dependencies": {
         "@apollo/client": "^3.4.16",
         "@chakra-ui/icons": "^1.0.16",
@@ -18,9 +18,9 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@web3-react/walletconnect-connector": "^6.2.7",
         "ethers": "^5.5.1",
         "framer-motion": "^4.1.17",
-        "gh-pages": "^3.2.3",
         "graphql": "^15.6.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -57,6 +57,7 @@
         ]
     },
     "devDependencies": {
-        "@types/react-router-dom": "^5.3.1"
+        "@types/react-router-dom": "^5.3.1",
+        "gh-pages": "^3.2.3"
     }
 }
