--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,8 @@
         "framer-motion": "^4.1.17",
         "graphql": "^15.6.1",
         "react": "^17.0.2",
+        "react-app-rewire-alias": "^1.1.4",
+        "react-app-rewired": "^2.1.8",
         "react-dom": "^17.0.2",
         "react-qr-code": "^2.0.2",
         "react-router-dom": "^5.3.0",
