--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@usedapp/core": "^0.5.4",
         "@web3-react/walletconnect-connector": "^6.2.7",
         "ethers": "^5.5.1",
         "framer-motion": "^4.1.17",
