--- a/ui/package.json
+++ b/ui/package.json
@@ -31,7 +31,8 @@
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
-        "web-vitals": "^1.0.1"
+        "web-vitals": "^1.0.1",
+        "web3": "^1.6.1"
     },
     "scripts": {
         "start": "react-app-rewired start",
